--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ before_script:
 
 script:
     - docker --version # print the version for logging
-    - docker build -t-reverse-proxy .
-    - docker tag-reverse-proxy ofbruno/reverse-proxy:latest
+    - docker build -t reverse-proxy .
+    - docker tag reverse-proxy ofbruno/reverse-proxy:latest
 
 after_success:
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
