--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,29 +1,30 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    service: reverseproxy
-  name: reverseproxy
-spec:
-  replicas: 1
-  template:
-    metadata:
-      labels:
+    labels:
         service: reverseproxy
-    spec:
-      containers:
-      - image: ofbruno/reverse-proxy
-        name: reverseproxy
-        imagePullPolicy: Always          
-        resources:
-          requests:
-            memory: "64Mi"
-            cpu: "250m"
-          limits:
-            memory: "1024Mi"
-            cpu: "500m"       
-        ports:
-        - containerPort: 8080
-      restartPolicy: Always
-
-
+    name: reverseproxy
+spec:
+    replicas: 1
+    selector:
+        matchLabels:
+            service: reverseproxy
+    template:
+        metadata:
+            labels:
+                service: reverseproxy
+        spec:
+            containers:
+                - image: ofbruno/reverse-proxy
+                  name: reverseproxy
+                  imagePullPolicy: Always
+                  resources:
+                      requests:
+                          memory: '64Mi'
+                          cpu: '250m'
+                      limits:
+                          memory: '1024Mi'
+                          cpu: '500m'
+                  ports:
+                      - containerPort: 8080
+            restartPolicy: Always
